# Doctor-Ai

./: .dockerignore  .env.example  .gitignore  .vercelignore  .vercelignore.backend  .vercelignore.frontend  AI_FEATURES.md  API_KEY_FEATURE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEMO_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_QUICK_START.md  DOCKER.md  DOCKER_CREDENTIAL_FIX.md  DOCKER_DEPLOYMENT.md  Dockerfile  Doctor-AI_Presentation.pptx  IMPROVEMENTS.md  LICENSE  MEDICAL_DATASETS.md  Makefile  PRODUCT_DESCRIPTIONS.md  PROJECT_OVERVIEW.md  PR_DESCRIPTION.md  PULL_REQUEST_DESCRIPTION.md  Plan.md  QDRANT_ARCHITECTURE.md  QDRANT_SETUP.md  QUICKSTART.md  README.md  RENDER_DATABASE_SETUP.md  RENDER_DEPLOYMENT.md  SECURITY.md  SETUP.md  TESTING.md  VERCEL_DEPLOYMENT.md  VERCEL_ENV_SETUP.md  VERCEL_ML_FREE_DEPLOYMENT.md  (+22 more)
.vercel/: install.sh
alembic/: env.py
api/: index.py  init_database.py  pip3.12  requirements.txt  vercel-build.sh
data/: README.md  _DATA_INFO.txt  api_keys.csv  audit_logs.csv  diagnosis_records.csv  medical_conditions.csv  patient_cases.csv  system_metrics.csv  user_sessions.csv  users.csv
datasets/: README.md
demo_data/: diagnoses_data.csv  sample_patient_cases.csv  system_metrics.csv
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SECURITY.md  VERCEL_DEPLOYMENT.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
scripts/: init_db.py  init_qdrant.py  seed_data.py  seed_data_lite.py  setup_qdrant.sh  test_ai_assistant.py  test_api.py  test_qdrant_connection.py
src/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
tests/: __init__.py  test_audit.py  test_config.py  test_diagnostic.py  (+3 more)
(+64 files in other folders)
