[project]
name = "doctor-ai"
version = "0.1.0"
description = "Medical Symptom Constellation Mapper - AI-powered diagnostic support system"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling", "setuptools>=70.0.0"]
build-backend = "hatchling.build"

[tool.poetry]
name = "doctor-ai"
version = "0.1.0"
description = "Medical Symptom Constellation Mapper - AI-powered diagnostic support system"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100
